<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/ivLogo"
            android:contentDescription="@string/img_logo"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_below="@id/ivLogo"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_login"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_below="@id/tvLogin"
            android:autofillHints="@string/username"
            android:inputType="text"
            android:hint="@string/username"
            android:fontFamily="sans-serif-smallcaps"
            android:drawableStart="@drawable/ic_baseline_perm_identity_24"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_below="@id/etUsername"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/fab_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            />

        <Button
            android:background="@drawable/btn_sign_in"
            android:id="@+id/btnSignIn"
            android:text="@string/SignIn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@id/btnSignIn"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

</LinearLayout>